List.of changes